--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -29,7 +29,7 @@
      <% if(currentUser){ %>
       <!-- <div class="user-profile_box"> <a href="/shopcard/user-profile">   <i class="fa-solid fa-user"></i> <span>My Account</span> </a></div> -->
       <div class="user-profile_box">
-        <span>My Account <i id="nav_my_accountArrow" class="fa-solid fa-angle-down"></i> </span> 
+        <span class="nav_my_account_text" >My Account <i id="nav_my_accountArrow" class="fa-solid fa-angle-down"></i> </span> 
         <div class="user-profile_Container">
           <div><a href="/shopcard/user-profile">   <i class="fa-solid fa-user"></i> <span>My Profile</span> </a></div>
           <div><i class="fa-solid fa-ticket"></i>  <span>My Coupons</span> </div>
