--- a/view/layouts/boilerPlateCode.ejs
+++ b/view/layouts/boilerPlateCode.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,16 +24,11 @@
     <!-- Sweet Alert library link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <style>
-        .bodyContainer::-webkit-scrollbar{
-           display: none !important;
-        }
-    </style>
 </head>
+
 <body   >
     <%-include("../includes/navbar.ejs") %>
-    <div id="bodyContainer">
+    <div id="bodyContainer"  >
         <%-include("../includes/flash.ejs") %> 
         <%-body -%> 
         <!-- User Card Box Start Here -->
@@ -75,4 +70,5 @@
     <script type="module" src="/javascript/nav_side.js" defer></script>
     <!-- <script src="/javascript/index.js" defer ></script>  -->
 </body>
+
 </html>
