--- a/view/listings/index.ejs
+++ b/view/listings/index.ejs
@@ -2,7 +2,7 @@
     
     <!-- HeroSection-->
     <section class="hero-section_container">
-      <div class="hm-prevBtn"><button id="prev-img-sld"><i class="fa-solid fa-arrow-left"></i></button></div>
+      <div class="hm-prevBtn "><button id="prev-img-sld" class="slideBtn"><i class="fa-solid fa-arrow-left"></i></button></div>
       <div class="sm-text-line">
         <h2 data-aos="fade-up" data-aos-duration="700" >in this season find best 👌</h2>
          <h1 data-aos="fade-down" data-aos-duration="700" id="main-heading_">
@@ -26,24 +26,27 @@
           <i id="circleIcon2" class="fa-regular fa-circle"></i>
         </div>
       </div>    
-      <div class="hm-nextBtn"><button id="next-img-sld"><i class="fa-solid fa-arrow-right"></i></button></div>  
+      <div class="hm-nextBtn "><button id="next-img-sld" class="slideBtn" ><i class="fa-solid fa-arrow-right"></i></button></div>  
     </section> 
     
     <!--Descover more User Related Products Section-->
     <section id="user-related-product-box">
       <div class="user-related-head-box">
         <h3 id="user-related-head" data-aos="fade-right" data-aos-duration="500" >Descover more. <span>Good things are Waithing for you!</span></h3>
-        <div class="rel-slide_btn"> <button id="rel_slide_prev"> <i class="fa-solid fa-arrow-left"></i> </button> <button id="rel_slide_next"><i class="fa-solid fa-arrow-right"></i></button> </div>
+        <div class="rel-slide_btn">
+           <button id="rel_slide_prev" class="slideBtn" > <i class="fa-solid fa-arrow-left"></i> </button>
+           <button id="rel_slide_next" class="slideBtn" ><i class="fa-solid fa-arrow-right"></i></button>
+       </div>
       </div>
       <div class="user-releted-card_box" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200" >
         <div class="user-rel-hm-card Volleyboll">
             <div class="rel-item-info-box">
                <div class="rel-item-info">
-                <span id="rel-collection">Collection</span>
+                <span class="rel-collection">Collection</span>
                 <h4>Up to 80% <br> of retail</h4>
                </div>
                <div class="rel-item-see-collBtn">
-                <button id="rel-collection_btn">See Collection</button>
+                <button class="rel-collection_btn">See Collection</button>
                </div>
             </div>
             <div class="rel-item-image">
@@ -54,11 +57,11 @@
         <div class="user-rel-hm-card tShirt">
           <div class="rel-item-info-box">
             <div class="rel-item-info">
-             <span id="rel-collection">Collection</span>
+             <span class="rel-collection">Collection</span>
              <h4>Give The Gift <br> of Choice</h4>
             </div>
             <div class="rel-item-see-collBtn">
-             <button id="rel-collection_btn">See Collection</button>
+             <button class="rel-collection_btn">See Collection</button>
             </div>
          </div>
          <div class="rel-item-image">
@@ -69,11 +72,11 @@
         <div class="user-rel-hm-card colPerFume">
           <div class="rel-item-info-box">
             <div class="rel-item-info">
-             <span id="rel-collection">Collection</span>
+             <span class="rel-collection">Collection</span>
              <h4>The latest from the  <br> top brand</h4>
             </div>
             <div class="rel-item-see-collBtn">
-             <button id="rel-collection_btn">See Collection</button>
+             <button class="rel-collection_btn">See Collection</button>
             </div>
          </div>
          <div class="rel-item-image">
@@ -84,11 +87,11 @@
         <div class="user-rel-hm-card jhumkaCollection">
           <div class="rel-item-info-box">
             <div class="rel-item-info">
-             <span id="rel-collection">Collection</span>
+             <span class="rel-collection">Collection</span>
              <h4>Home Decore <br> Collection</h4>
             </div>
             <div class="rel-item-see-collBtn">
-             <button id="rel-collection_btn">See Collection</button>
+             <button class="rel-collection_btn">See Collection</button>
             </div>
          </div>
          <div class="rel-item-image">
@@ -102,10 +105,10 @@
     <!-- New Arival Products-->
      <section id="newArival-product-box">
        <div class="new-arivale-para">
-         <h2 id="new-arival-text" data-aos="fade-left" data-aos-duration="500" >New Arival  <span>REY backpacks & bages</span></h2>
+         <h3 id="new-arival-text" data-aos="fade-left" data-aos-duration="500" >New Arival  <span>REY backpacks & bages</span></h3>
          <div class="new-arval-prev-next-btn" data-aos="fade-down" data-aos-duration="500" >          
-          <button id="new-arval-prevBtn"><i class="fa-solid fa-arrow-left"></i></button>
-          <button id="new-arival-nextBtn"><i class="fa-solid fa-arrow-right"></i></button>
+          <button id="new-arval-prevBtn" class="slideBtn" ><i class="fa-solid fa-arrow-left"></i></button>
+          <button id="new-arival-nextBtn" class="slideBtn" ><i class="fa-solid fa-arrow-right"></i></button>
          </div>
        </div>
        <div class="new-arival-slider-box"  data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
@@ -227,10 +230,7 @@
               <p> <i class="fa-solid fa-star"></i> 4.5 (5 Reviews) </p>
             </div>
           </div>
-        </div>
-
-
-
+        </div> 
        </div>
       </section>
 
